--- a/src/protected/application/themes/BaseV1/assets/css/sass/globals/_variables.scss
+++ b/src/protected/application/themes/BaseV1/assets/css/sass/globals/_variables.scss
@@ -196,6 +196,7 @@ $z-index-main-header:           1700 !default;
 $z-index-submenu-dropdown:      1800 !default;
 $z-index-tip:                   1900 !default;
 $z-index-busca:                 9999 !default;
+$z-index-map-label:          2000000 !default;
 
 //== Alerts
 //
